Prevent wrap, which overflows on button below

--- a/website-common/css/styles.css
+++ b/website-common/css/styles.css
@@ -61,6 +61,7 @@ body {
     border: 1px solid gainsboro;
     border-radius: 10px;
     margin: 5px;
+    white-space: nowrap;
 }
 
 #app-header .app-header-languages .choose-language:disabled {
